# hotbaud

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/hotbaud/: __init__.py  _entrypoint.py  _fdshare.py  _utils.py  errors.py  eventfd.py  pipeline.py  ringbuf.py  testing.py  types.py
src/hotbaud/experimental/: _worker.py  efdlock.py  event.py  flock.py  pipeline.py  thread.py
src/hotbaud/memchan/: __init__.py  _fans.py  _impl.py
tests/: test_channels.py  test_eventfd.py  test_flock.py  test_pipe.py  test_thread_queue.py
