[project]
name = 'hotbaud'
version = '0.1.0'
description = 'A lightweight, multi IPC lib, that eats healthy'
authors = [{ name = 'Guillermo Rodriguez', email = 'guillermo@telos.net' }]
requires-python = '>=3.11'
readme = 'README.md'
license = 'MIT'
dependencies = [
    'cffi>=1.17.1',
    'msgspec>=0.19.0',
    'trio>=0.30.0',
    'trio-asyncio>=0.15.0',
    'trio-parallel>=1.3.0',
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ['src/hotbaud']

[tool.hatch.build.targets.wheel]
include = ['src/hotbaud']

[tool.hatch.build.targets.wheel.sources]
'src/hotbaud' = 'hotbaud'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.ruff]
exclude = [
    '.git',
    '.ruff_cache',
    '.venv',
]

line-length = 80
indent-width = 4
target-version = 'py311'

[tool.pytest.ini_options]
addopts = [
  '--show-capture=no',
]
