[project]
name = 'hotbaud'
version = '0.1.0'
description = 'A lightweight, multi IPC lib, that eats healthy'
authors = [{ name = 'Guillermo Rodriguez', email = 'guillermo@telos.net' }]
requires-python = '>=3.11'
readme = 'README.md'
license = 'MIT'
dependencies = [
    'cffi>=1.17.1',
    'msgspec>=0.19.0',
    'trio>=0.30.0',
    'trio-asyncio>=0.15.0',
]

[project.scripts]
hotbaud-worker = 'hotbaud.experimental._worker:worker_main'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ['src/hotbaud']

[tool.hatch.build.targets.wheel]
include = ['src/hotbaud']

[tool.hatch.build.targets.wheel.sources]
'src/hotbaud' = 'hotbaud'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[dependency-groups]
dev = [
    'pytest>=8.4.1',
    'pytest-trio>=0.8.0',
]

[tool.ruff]
line-length = 80
exclude = [
    '.git',
    '.ruff_cache',
    '.venv',
]

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'
line-ending = 'lf'
preview = true
docstring-code-format = true

[tool.ruff.lint]
select = ['Q']  # flake8-quotes rules
ignore = ['Q002', 'D300']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'

[tool.pytest.ini_options]
addopts = [
  '--show-capture=no',
]
trio_mode = true
